--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -63,6 +63,7 @@
   "command.tonekoadmin.skin.remove": "§a成功删除了 %s §a的皮肤了喵",
   "effect.toneko.exciting": "兴奋",
   "enchantment.toneko.reversion": "反转",
+  "enchantment.toneko.enforcement": "强制",
   "entity.toneko.adventurer_neko": "冒险家猫娘",
   "entity.toneko.adventurer_neko.des": "热爱冒险的猫娘",
   "entity.toneko.crystal_neko": "Crystal_Neko",
@@ -107,6 +108,23 @@
   "item.toneko.neko_ears": "猫耳朵",
   "item.toneko.neko_potion.effect.empty": "猫娘药水",
   "item.toneko.neko_tail": "猫尾巴",
+  "item.toneko.contract": "契约",
+  "item.toneko.contract.not_a_neko": "§c她不是猫娘哦",
+  "item.toneko.contract.info": "§a与猫娘签订契约，成为她的主人",
+  "item.toneko.contract.already_owner": "§c你已经是她的主人了喵~",
+  "item.toneko.contract.not_enough_xp": "§c经验不足哦喵~",
+  "item.toneko.contract.success": "§a成功与 %s §a签订契约了喵~",
+  "item.toneko.contract.mesugaki.0": "§e%s §d>> §c你这个笨蛋，居然敢和我签订契约？",
+  "item.toneko.contract.mesugaki.1": "§e%s §d>> §c我可不会答应的哦~杂鱼♡",
+  "item.toneko.contract.mesugaki.2": "§e%s §d>> §c略略略~笨蛋~",
+  "item.toneko.contract.mesugaki.3": "§e%s §d>> §c哦？你想和我签订契约？我可不会答应的哦~",
+  "item.toneko.contract.mesugaki.4": "§e%s §d>> §c哼哼？你以为我会和你签订契约吗？",
+  "item.toneko.contract.mesugaki.5": "§e%s §d>> §c杂鱼杂鱼♡和我签订契约？你太天真了！",
+  "item.toneko.contract.mesugaki.6": "§e%s §d>> §c无聊，我才不会答应你呢~",
+  "item.toneko.contract.mesugaki.7": "§e%s §d>> §c什么玩意？没意思，我才不会和你签订契约呢~",
+  "item.toneko.contract.mesugaki.8": "§e%s §d>> §c居然想要我来吗，真是只杂鱼呢♡",
+  "item.toneko.contract.mesugaki.9": "§e%s §d>> §c你还不配和我签订契约哦~杂鱼♡",
+  "item.toneko.contract.mesugaki.10": "§e%s §d>> §c不可能的哦♡你这个笨蛋杂鱼！",
   "itemGroup.toneko": "猫猫",
   "key.toneko.get_down": "趴下",
   "key.toneko.jump": "获取跳跃提升",
