蜜糖灾星・喵芙蕾

--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -72,6 +72,7 @@
   "entity.toneko.fighting_neko.des": "拥有战斗能力的猫娘，虽然有时候会有点笨笨的",
   "entity.toneko.ghost_neko": "幽灵猫娘",
   "entity.toneko.ghost_neko.des": "幽灵形态的猫娘，无视重力，可以穿墙与飞行，但可以与生物交互",
+  "entity.toneko.mouflet_neko_boss": "蜜糖灾星・喵芙蕾",
   "gui.back.des": "不用解释你也知道是什么意思叭",
   "gui.toneko.roulette.option.close": "关闭",
   "gui.toneko.roulette.option.get_down": "趴下",
@@ -125,6 +126,9 @@
   "item.toneko.contract.mesugaki.8": "§e%s §d>> §c居然想要我来吗，真是只杂鱼呢♡",
   "item.toneko.contract.mesugaki.9": "§e%s §d>> §c你还不配和我签订契约哦~杂鱼♡",
   "item.toneko.contract.mesugaki.10": "§e%s §d>> §c不可能的哦♡你这个笨蛋杂鱼！",
+  "item.toneko.contract.tame_fail": "§c失败了哦~",
+  "boss.toneko.mouflet.skill.spoil": "§e%s §d>> §a求求啦，别这样嘛，好不好喵~",
+  "boss.toneko.mouflet.skill.charm": "§e%s §d>> §d嘘...现在开始是秘密时间哦~",
   "itemGroup.toneko": "猫猫",
   "key.toneko.get_down": "趴下",
   "key.toneko.jump": "获取跳跃提升",
