--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -13,8 +13,79 @@
   "advancements.toneko.root.title": "§aStick to neko",
   "attribute.name.neko.degree": "Neko Degree",
   "attribute.name.neko.max_energy": "Max Neko Energy",
+  "block.toneko.aggregator_block": "Neko Aggregator",
   "block.toneko.catnip": "Catnip",
   "command.neko.effect.not_enough_energy": "§cYour Neko Energy is not enough",
+  "boss.toneko.mouflet.gift.0": "§e%s §d>> §aMeow! Is this a gift for me? So happy!",
+  "boss.toneko.mouflet.gift.1": "§e%s §d>> §aWow~ I love you the most, Master!",
+  "boss.toneko.mouflet.gift.2": "§e%s §d>> §aI'll treasure it dearly~",
+  "boss.toneko.mouflet.gift.3": "§e%s §d>> §aDid you prepare this just for me? So touched...",
+  "boss.toneko.mouflet.gift.4": "§e%s §d>> §aMeow~ Master knows me best!",
+  "boss.toneko.mouflet.gift.5": "§e%s §d>> §aCan I use it right now?",
+  "boss.toneko.mouflet.gift.6": "§e%s §d>> §aIs this... a little surprise for me?",
+  "boss.toneko.mouflet.gift.7": "§e%s §d>> §aSniff... I'm so happy...",
+  "boss.toneko.mouflet.gift.8": "§e%s §d>> §aMaster is so good to me~",
+  "boss.toneko.mouflet.gift.9": "§e%s §d>> §aMeow~ This is the best gift I've ever received!",
+  "boss.toneko.mouflet.hurt.0": "§e%s §d>> §aOuch meow! That hurts!",
+  "boss.toneko.mouflet.hurt.1": "§e%s §d>> §aEek! Don't hit me!",
+  "boss.toneko.mouflet.hurt.2": "§e%s §d>> §aOwie owie! Meanie!",
+  "boss.toneko.mouflet.hurt.3": "§e%s §d>> §aMeow... be gentler...",
+  "boss.toneko.mouflet.hurt.4": "§e%s §d>> §aHit me again and I'll bite you!",
+  "boss.toneko.mouflet.hurt.5": "§e%s §d>> §aSniff... so cruel...",
+  "boss.toneko.mouflet.hurt.6": "§e%s §d>> §aI'm getting angry!",
+  "boss.toneko.mouflet.hurt.7": "§e%s §d>> §aMeow! Don't touch there!",
+  "boss.toneko.mouflet.hurt.8": "§e%s §d>> §aSniff... bullying me because you can't win...",
+  "boss.toneko.mouflet.hurt.9": "§e%s §d>> §aPain pain go away~ go away~",
+  "boss.toneko.mouflet.skill.charm.0": "§e%s §d>> §dShh... it's secret time now~",
+  "boss.toneko.mouflet.skill.charm.1": "§e%s §d>> §dCome play with me~",
+  "boss.toneko.mouflet.skill.charm.2": "§e%s §d>> §dDon't be so mean, I'm actually very gentle~",
+  "boss.toneko.mouflet.skill.charm.3": "§e%s §d>> §dHow could you bear to hurt someone as cute as me?",
+  "boss.toneko.mouflet.skill.charm.4": "§e%s §d>> §dLook here look here, I'm over here~",
+  "boss.toneko.mouflet.skill.charm.5": "§e%s §d>> §dYour attacks don't work on me, why not put down your weapon?",
+  "boss.toneko.mouflet.skill.charm.6": "§e%s §d>> §dAre you sure you want to continue? I'll feel bad for you~",
+  "boss.toneko.mouflet.skill.charm.7": "§e%s §d>> §dMeow~ Fighting is so barbaric, come play with me~ ♡",
+  "boss.toneko.mouflet.skill.charm.8": "§e%s §d>> §dYou keep missing, are you distracted by my charm?",
+  "boss.toneko.mouflet.skill.charm.9": "§e%s §d>> §dStop hitting me, I surrender already!",
+  "boss.toneko.mouflet.skill.despair.0": "§4%s §c>> §4AAAAH!!! You'll all die with me!!!",
+  "boss.toneko.mouflet.skill.despair.1": "§4%s §c>> §4If that's how it is... LET'S ALL PERISH TOGETHER!!!",
+  "boss.toneko.mouflet.skill.despair.2": "§4%s §c>> §4Meow haha... I don't... care about anything anymore...",
+  "boss.toneko.mouflet.skill.despair.3": "§4%s §c>> §4Why... why did you force me to this point!!",
+  "boss.toneko.mouflet.skill.despair.4": "§4%s §c>> §4FEEL MY PAIN!!!",
+  "boss.toneko.mouflet.skill.despair.5": "§4%s §c>> §4Farewell... cruel world...",
+  "boss.toneko.mouflet.skill.despair.6": "§4%s §c>> §4Meow... you asked for this!!!",
+  "boss.toneko.mouflet.skill.despair.7": "§4%s §c>> §4Core overload initiated... 20 seconds remaining...",
+  "boss.toneko.mouflet.skill.despair.8": "§4%s §c>> §4Meow... I've... reached my limit...",
+  "boss.toneko.mouflet.skill.despair.9": "§4%s §c>> §4Warning! Self-destruct sequence activated!",
+  "boss.toneko.mouflet.skill.grabfly.0": "§e%s §d>> §bHehe, let's go for a sky ride!",
+  "boss.toneko.mouflet.skill.grabfly.1": "§e%s §d>> §bThe view is better from up high, enjoy the scenery!",
+  "boss.toneko.mouflet.skill.grabfly.2": "§e%s §d>> §bDon't squirm or you'll fall, and I won't catch you~",
+  "boss.toneko.mouflet.skill.grabfly.3": "§e%s §d>> §bWheee! Up we go!",
+  "boss.toneko.mouflet.skill.grabfly.4": "§e%s §d>> §bLet me show you what it's like to be a bird!",
+  "boss.toneko.mouflet.skill.grabfly.5": "§e%s §d>> §bNow you're at my mercy~ (smug)",
+  "boss.toneko.mouflet.skill.grabfly.6": "§e%s §d>> §bHold on tight, speeding up!",
+  "boss.toneko.mouflet.skill.grabfly.7": "§e%s §d>> §bThat's what you get for hitting me!",
+  "boss.toneko.mouflet.skill.grabfly.8": "§e%s §d>> §bThe air smells so fresh up here~",
+  "boss.toneko.mouflet.skill.grabfly.9": "§e%s §d>> §bFly fly fly so high!",
+  "boss.toneko.mouflet.skill.spoil.0": "§e%s §d>> §aPlease please, don't do this, okay meow~ (pouts)",
+  "boss.toneko.mouflet.skill.spoil.1": "§e%s §d>> §aOwie, that hurts, stop hitting me!",
+  "boss.toneko.mouflet.skill.spoil.2": "§e%s §d>> §aMeanie! I'll cry if you keep hitting me!",
+  "boss.toneko.mouflet.skill.spoil.3": "§e%s §d>> §aHow could you hit someone as cute as me!",
+  "boss.toneko.mouflet.skill.spoil.4": "§e%s §d>> §aStop hitting me, want to pet me instead?",
+  "boss.toneko.mouflet.skill.spoil.5": "§e%s §d>> §aWait! Let me catch my breath~",
+  "boss.toneko.mouflet.skill.spoil.6": "§e%s §d>> §aI admit defeat, hit me softer~",
+  "boss.toneko.mouflet.skill.spoil.7": "§e%s §d>> §aKeep hitting me and I'll get really mad!",
+  "boss.toneko.mouflet.skill.spoil.8": "§e%s §d>> §aOwie, it hurts, I need kisses to get up!",
+  "boss.toneko.mouflet.skill.spoil.9": "§e%s §d>> §aNo more hitting, I surrender already~",
+  "boss.toneko.mouflet.tamed.0": "§e%s §d>> §aFrom now on you're my Master~",
+  "boss.toneko.mouflet.tamed.1": "§e%s §d>> §aSniff... be good to me, okay...",
+  "boss.toneko.mouflet.tamed.2": "§e%s §d>> §aMeow~ Master is the best!",
+  "boss.toneko.mouflet.tamed.3": "§e%s §d>> §aI'll be good... probably?",
+  "boss.toneko.mouflet.tamed.4": "§e%s §d>> §aLet's get along, Master~",
+  "boss.toneko.mouflet.tamed.5": "§e%s §d>> §aNo take-backs, the contract is sealed!",
+  "boss.toneko.mouflet.tamed.6": "§e%s §d>> §aMeow... I actually got tamed...",
+  "boss.toneko.mouflet.tamed.7": "§e%s §d>> §aMaster has to take care of me forever now~",
+  "boss.toneko.mouflet.tamed.8": "§e%s §d>> §aI-it's not like I agreed because I like you or anything!",
+  "boss.toneko.mouflet.tamed.9": "§e%s §d>> §aMeow~ Master smells so nice~",
   "command.neko.help": "§b/neko getHelp(These commands only for neko):\n§a/neko jump §bJump higher!\n§a/neko vision §bDo you want to see clearly as a neko at night?\n§a/neko speed §bToo quickly(>_<)\n§a/neko lie §bLie down and rest for a while\n§a/neko nickname <nickname> §bSet a cute nickname\n§a/neko level §bShow your neko level\n§a/neko lore <lore> §bSet a cute lore for your item in hand.",
   "command.neko.level.success": "§aYou neko level is %f",
   "command.neko.lore.no_item": "§cI can find air from your hand.",
@@ -62,6 +133,7 @@
   "command.tonekoadmin.skin.list": "§bAll neko skins are here:\n %s",
   "command.tonekoadmin.skin.remove": "§aSuccessfully deleted %s §a skins meow",
   "effect.toneko.exciting": "Exciting",
+  "enchantment.toneko.enforcement": "Enforcement",
   "enchantment.toneko.reversion": "Reversion",
   "entity.toneko.adventurer_neko": "Adventurer Neko",
   "entity.toneko.adventurer_neko.des": "A neko who loves adventure",
@@ -71,6 +143,7 @@
   "entity.toneko.fighting_neko.des": "A neko who can fight with enemy,although it is seems baka sometimes.",
   "entity.toneko.ghost_neko": "Ghost neko",
   "entity.toneko.ghost_neko.des": "A neko in ghost form, ignoring gravity, can pass through walls and fly, but can interact with creatures",
+  "entity.toneko.mouflet_neko_boss": "Honeyed Calamity・Mouflet",
   "gui.back.des": "I guess you know the meaning",
   "gui.toneko.roulette.option.close": "Close",
   "gui.toneko.roulette.option.get_down": "Lie down",
@@ -94,6 +167,24 @@
   "item.toneko.catnip": "Catnip",
   "item.toneko.catnip_sandwich": "Catnip Sandwich",
   "item.toneko.catnip_seed": "Catnip Seed",
+  "item.toneko.contract": "Contract",
+  "item.toneko.contract.already_owner": "§cYou're already her master nya~",
+  "item.toneko.contract.info": "§aForm a contract with the neko girl to become her master",
+  "item.toneko.contract.mesugaki.0": "§e%s §d>> §cYou idiot, daring to make a contract with me?",
+  "item.toneko.contract.mesugaki.1": "§e%s §d>> §cI won't agree to it~ zako♡",
+  "item.toneko.contract.mesugaki.2": "§e%s §d>> §cNyahaha~ stupid~",
+  "item.toneko.contract.mesugaki.3": "§e%s §d>> §cOh? Want to contract me? As if I'd agree~",
+  "item.toneko.contract.mesugaki.4": "§e%s §d>> §cHmph? You think I'd contract with you?",
+  "item.toneko.contract.mesugaki.5": "§e%s §d>> §cZako zako♡ Contract with me? How naive!",
+  "item.toneko.contract.mesugaki.6": "§e%s §d>> §cBoring, I'd never accept you~",
+  "item.toneko.contract.mesugaki.7": "§e%s §d>> §cWhat's this? Lame, I'd never contract with you~",
+  "item.toneko.contract.mesugaki.8": "§e%s §d>> §cWanting me to join? What a zako you are♡",
+  "item.toneko.contract.mesugaki.9": "§e%s §d>> §cYou're not worthy to contract me~ zako♡",
+  "item.toneko.contract.mesugaki.10": "§e%s §d>> §cNo way♡ You stupid zako!",
+  "item.toneko.contract.not_a_neko": "§cShe's not a neko girl",
+  "item.toneko.contract.not_enough_xp": "§cNot enough XP nya~",
+  "item.toneko.contract.success": "§aSuccessfully contracted with %s §anya~",
+  "item.toneko.contract.tame_fail": "§cFailed nya~",
   "item.toneko.explosive_bomb": "Explosive Bomb",
   "item.toneko.fighting_neko_spawn_egg": "Fighting Neko Spawn",
   "item.toneko.furry_bohe": "Furry Bohe",
@@ -101,9 +192,11 @@
   "item.toneko.ghost_neko_spawn_egg": "Ghost Neko Spawn",
   "item.toneko.lightning_bomb": "Lightning Bomb",
   "item.toneko.music_disc_kawaii": "Music Disc",
+  "item.toneko.neko_aggregator": "Neko Aggregator",
   "item.toneko.music_disc_never_gonna_give_you_up": "Music Disc",
   "item.toneko.neko_collector": "Neko collector",
   "item.toneko.neko_collector.info": "%d / %d Neko Energy already",
+  "item.toneko.neko_ingot": "Neko Ingot",
   "item.toneko.neko_ears": "Neko ears",
   "item.toneko.neko_potion.effect.empty": "Neko Potion",
   "item.toneko.neko_tail": "Neko Tail",
