--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -13,7 +13,78 @@
   "advancements.toneko.root.title": "§a和猫猫贴贴",
   "attribute.name.neko.degree": "猫猫等级",
   "attribute.name.neko.max_energy": "最大猫猫能量",
+  "block.toneko.aggregator_block": "猫猫聚合台",
   "block.toneko.catnip": "猫薄荷",
+  "boss.toneko.mouflet.gift.0": "§e%s §d>> §a喵！是给人家礼物吗？好开心！",
+  "boss.toneko.mouflet.gift.1": "§e%s §d>> §a呜哇~最喜欢主人了！",
+  "boss.toneko.mouflet.gift.2": "§e%s §d>> §a人家会好好珍惜的~",
+  "boss.toneko.mouflet.gift.3": "§e%s §d>> §a这是专门给人家准备的吗？好感动...",
+  "boss.toneko.mouflet.gift.4": "§e%s §d>> §a喵呜~主人最懂人家了！",
+  "boss.toneko.mouflet.gift.5": "§e%s §d>> §a人家可以现在就用掉吗？",
+  "boss.toneko.mouflet.gift.6": "§e%s §d>> §a这是...给人家的小惊喜吗？",
+  "boss.toneko.mouflet.gift.7": "§e%s §d>> §a呜...人家好开心...",
+  "boss.toneko.mouflet.gift.8": "§e%s §d>> §a主人对人家真好~",
+  "boss.toneko.mouflet.gift.9": "§e%s §d>> §a喵~这是人家收到过最好的礼物！",
+  "boss.toneko.mouflet.hurt.0": "§e%s §d>> §a呜喵！好痛！",
+  "boss.toneko.mouflet.hurt.1": "§e%s §d>> §a呀！不许打人家！",
+  "boss.toneko.mouflet.hurt.2": "§e%s §d>> §a疼疼疼！坏蛋！",
+  "boss.toneko.mouflet.hurt.3": "§e%s §d>> §a喵呜...轻点嘛...",
+  "boss.toneko.mouflet.hurt.4": "§e%s §d>> §a再打人家就咬你哦！",
+  "boss.toneko.mouflet.hurt.5": "§e%s §d>> §a呜...好过分...",
+  "boss.toneko.mouflet.hurt.6": "§e%s §d>> §a人家要生气了！",
+  "boss.toneko.mouflet.hurt.7": "§e%s §d>> §a喵！不许碰那里！",
+  "boss.toneko.mouflet.hurt.8": "§e%s §d>> §a呜...打不过就欺负人家...",
+  "boss.toneko.mouflet.hurt.9": "§e%s §d>> §a痛痛飞走~痛痛飞走~",
+  "boss.toneko.mouflet.skill.charm.0": "§e%s §d>> §d嘘...现在开始是秘密时间哦~",
+  "boss.toneko.mouflet.skill.charm.1": "§e%s §d>> §d来陪人家玩玩嘛~",
+  "boss.toneko.mouflet.skill.charm.2": "§e%s §d>> §d别那么凶嘛，人家可是很温柔的哦~",
+  "boss.toneko.mouflet.skill.charm.3": "§e%s §d>> §d难道你忍心伤害这么可爱的我吗？",
+  "boss.toneko.mouflet.skill.charm.4": "§e%s §d>> §d看这里看这里，人家在这里呢~",
+  "boss.toneko.mouflet.skill.charm.5": "§e%s §d>> §d你的攻击对人家无效哦，不如放下武器吧~",
+  "boss.toneko.mouflet.skill.charm.6": "§e%s §d>> §d你确定还要继续吗？人家可是会心疼的哦~",
+  "boss.toneko.mouflet.skill.charm.7": "§e%s §d>> §d喵~战斗什么的太粗鲁了，来陪人家玩嘛~ ♡",
+  "boss.toneko.mouflet.skill.charm.8": "§e%s §d>> §d你的攻击都打偏啦，是不是被人家迷住了呀？",
+  "boss.toneko.mouflet.skill.charm.9": "§e%s §d>> §d别打啦，人家投降还不行吗？",
+  "boss.toneko.mouflet.skill.despair.0": "§4%s §c>> §4啊啊啊！！！你们都要给我陪葬！！！",
+  "boss.toneko.mouflet.skill.despair.1": "§4%s §c>> §4既然这样...那就一起毁灭吧！！！",
+  "boss.toneko.mouflet.skill.despair.2": "§4%s §c>> §4喵哈哈...已经...什么都不在乎了...",
+  "boss.toneko.mouflet.skill.despair.3": "§4%s §c>> §4为什么...为什么要逼我走到这一步！！",
+  "boss.toneko.mouflet.skill.despair.4": "§4%s §c>> §4感受我的痛苦吧！！！",
+  "boss.toneko.mouflet.skill.despair.5": "§4%s §c>> §4永别了...这个世界...",
+  "boss.toneko.mouflet.skill.despair.6": "§4%s §c>> §4喵呜...这是你们自找的！！！",
+  "boss.toneko.mouflet.skill.despair.7": "§4%s §c>> §4核心过载启动...倒计时20秒...",
+  "boss.toneko.mouflet.skill.despair.8": "§4%s §c>> §4喵...已经...到极限了...",
+  "boss.toneko.mouflet.skill.despair.9": "§4%s §c>> §4警告！自毁程序已激活！",
+  "boss.toneko.mouflet.skill.grabfly.0": "§e%s §d>> §b嘿嘿，带你去天上兜风！",
+  "boss.toneko.mouflet.skill.grabfly.1": "§e%s §d>> §b飞得高看得远，好好欣赏风景吧！",
+  "boss.toneko.mouflet.skill.grabfly.2": "§e%s §d>> §b别乱动哦，掉下去人家可不管~",
+  "boss.toneko.mouflet.skill.grabfly.3": "§e%s §d>> §b起飞啦！",
+  "boss.toneko.mouflet.skill.grabfly.4": "§e%s §d>> §b让你也体验一下当鸟的感觉！",
+  "boss.toneko.mouflet.skill.grabfly.5": "§e%s §d>> §b现在可是在我的掌控之中哦~(得意)",
+  "boss.toneko.mouflet.skill.grabfly.6": "§e%s §d>> §b抓紧啦，要加速咯！",
+  "boss.toneko.mouflet.skill.grabfly.7": "§e%s §d>> §b让你打人家，现在知道厉害了吧？",
+  "boss.toneko.mouflet.skill.grabfly.8": "§e%s §d>> §b上面的空气真新鲜呢~",
+  "boss.toneko.mouflet.skill.grabfly.9": "§e%s §d>> §b飞呀飞呀飞高高！",
+  "boss.toneko.mouflet.skill.spoil.0": "§e%s §d>> §a求求啦，别这样嘛，好不好喵~(委屈)",
+  "boss.toneko.mouflet.skill.spoil.1": "§e%s §d>> §a呜呜，好痛哦，不要打人家啦！",
+  "boss.toneko.mouflet.skill.spoil.2": "§e%s §d>> §a坏蛋！再打人家就哭给你看！",
+  "boss.toneko.mouflet.skill.spoil.3": "§e%s §d>> §a人家这么可爱，你怎么下得去手！",
+  "boss.toneko.mouflet.skill.spoil.4": "§e%s §d>> §a不要打啦，给你摸摸好不好？",
+  "boss.toneko.mouflet.skill.spoil.5": "§e%s §d>> §a等等！让人家喘口气嘛~",
+  "boss.toneko.mouflet.skill.spoil.6": "§e%s §d>> §a人家知道错啦，轻点打嘛~",
+  "boss.toneko.mouflet.skill.spoil.7": "§e%s §d>> §a再打人家，人家就要生气啦！",
+  "boss.toneko.mouflet.skill.spoil.8": "§e%s §d>> §a呜呜，好痛，要亲亲才能起来！",
+  "boss.toneko.mouflet.skill.spoil.9": "§e%s §d>> §a不打了不打了，人家认输还不行嘛~",
+  "boss.toneko.mouflet.tamed.0": "§e%s §d>> §a从今以后你就是人家的主人啦~",
+  "boss.toneko.mouflet.tamed.1": "§e%s §d>> §a呜...要好好对人家哦...",
+  "boss.toneko.mouflet.tamed.2": "§e%s §d>> §a喵~主人最好了！",
+  "boss.toneko.mouflet.tamed.3": "§e%s §d>> §a人家会乖乖听话的...大概？",
+  "boss.toneko.mouflet.tamed.4": "§e%s §d>> §a以后请多指教啦，主人~",
+  "boss.toneko.mouflet.tamed.5": "§e%s §d>> §a不许反悔哦，契约成立！",
+  "boss.toneko.mouflet.tamed.6": "§e%s §d>> §a喵呜...居然被收服了...",
+  "boss.toneko.mouflet.tamed.7": "§e%s §d>> §a主人要负责养人家一辈子哦~",
+  "boss.toneko.mouflet.tamed.8": "§e%s §d>> §a人家才不是因为喜欢你才同意的呢！",
+  "boss.toneko.mouflet.tamed.9": "§e%s §d>> §a喵~主人的味道真好闻~",
   "command.neko.effect.not_enough_energy": "§c能量不足啦",
   "command.neko.help": "§b/neko 帮助(注意哦,这些命令都是猫猫专有的哦):\n§a/neko jump §b跳的更高!\n§a/neko vision §b想和猫猫一样在夜晚看得更清楚吗\n§a/neko speed §b太快啦(>_<)\n§a/neko lie §b躺下来休息会吧\n§a/neko nickname <昵称> §b设置一个可爱的昵称吧\n§a/neko level §b看看你的猫猫等级\n§a/neko lore <描述> §b给你手中的物品设置一个可爱的描述吧",
   "command.neko.level.success": "§a你的猫猫等级是 %f §a啦",
@@ -62,8 +133,8 @@
   "command.tonekoadmin.skin.list": "§b所有的猫猫皮肤在这里啦:\n %s",
   "command.tonekoadmin.skin.remove": "§a成功删除了 %s §a的皮肤了喵",
   "effect.toneko.exciting": "兴奋",
-  "enchantment.toneko.reversion": "反转",
   "enchantment.toneko.enforcement": "强制",
+  "enchantment.toneko.reversion": "反转",
   "entity.toneko.adventurer_neko": "冒险家猫娘",
   "entity.toneko.adventurer_neko.des": "热爱冒险的猫娘",
   "entity.toneko.crystal_neko": "Crystal_Neko",
@@ -96,27 +167,12 @@
   "item.toneko.catnip": "猫薄荷",
   "item.toneko.catnip_sandwich": "猫薄荷三明治",
   "item.toneko.catnip_seed": "猫薄荷种子",
-  "item.toneko.explosive_bomb": "爆炸弹",
-  "item.toneko.fighting_neko_spawn_egg": "武备猫娘生成",
-  "item.toneko.furry_bohe": "兽薄荷",
-  "item.toneko.furry_bohe.info": "§aAlso try Furry Bohe",
-  "item.toneko.ghost_neko_spawn_egg": "幽灵猫娘生成",
-  "item.toneko.lightning_bomb": "闪电弹",
-  "item.toneko.music_disc_kawaii": "音乐唱片",
-  "item.toneko.music_disc_never_gonna_give_you_up": "音乐唱片",
-  "item.toneko.neko_collector": "喵喵吸收器",
-  "item.toneko.neko_collector.info": "已经吸收 %d / %d 猫猫能量啦",
-  "item.toneko.neko_ears": "猫耳朵",
-  "item.toneko.neko_potion.effect.empty": "猫娘药水",
-  "item.toneko.neko_tail": "猫尾巴",
   "item.toneko.contract": "契约",
-  "item.toneko.contract.not_a_neko": "§c她不是猫娘哦",
-  "item.toneko.contract.info": "§a与猫娘签订契约，成为她的主人",
   "item.toneko.contract.already_owner": "§c你已经是她的主人了喵~",
-  "item.toneko.contract.not_enough_xp": "§c经验不足哦喵~",
-  "item.toneko.contract.success": "§a成功与 %s §a签订契约了喵~",
+  "item.toneko.contract.info": "§a与猫娘签订契约，成为她的主人",
   "item.toneko.contract.mesugaki.0": "§e%s §d>> §c你这个笨蛋，居然敢和我签订契约？",
   "item.toneko.contract.mesugaki.1": "§e%s §d>> §c我可不会答应的哦~杂鱼♡",
+  "item.toneko.contract.mesugaki.10": "§e%s §d>> §c不可能的哦♡你这个笨蛋杂鱼！",
   "item.toneko.contract.mesugaki.2": "§e%s §d>> §c略略略~笨蛋~",
   "item.toneko.contract.mesugaki.3": "§e%s §d>> §c哦？你想和我签订契约？我可不会答应的哦~",
   "item.toneko.contract.mesugaki.4": "§e%s §d>> §c哼哼？你以为我会和你签订契约吗？",
@@ -125,78 +181,25 @@
   "item.toneko.contract.mesugaki.7": "§e%s §d>> §c什么玩意？没意思，我才不会和你签订契约呢~",
   "item.toneko.contract.mesugaki.8": "§e%s §d>> §c居然想要我来吗，真是只杂鱼呢♡",
   "item.toneko.contract.mesugaki.9": "§e%s §d>> §c你还不配和我签订契约哦~杂鱼♡",
-  "item.toneko.contract.mesugaki.10": "§e%s §d>> §c不可能的哦♡你这个笨蛋杂鱼！",
+  "item.toneko.contract.not_a_neko": "§c她不是猫娘哦",
+  "item.toneko.contract.not_enough_xp": "§c经验不足哦喵~",
+  "item.toneko.contract.success": "§a成功与 %s §a签订契约了喵~",
   "item.toneko.contract.tame_fail": "§c失败了哦~",
-  "boss.toneko.mouflet.skill.spoil.0": "§e%s §d>> §a求求啦，别这样嘛，好不好喵~(委屈)",
-  "boss.toneko.mouflet.skill.spoil.1": "§e%s §d>> §a呜呜，好痛哦，不要打人家啦！",
-  "boss.toneko.mouflet.skill.spoil.2": "§e%s §d>> §a坏蛋！再打人家就哭给你看！",
-  "boss.toneko.mouflet.skill.spoil.3": "§e%s §d>> §a人家这么可爱，你怎么下得去手！",
-  "boss.toneko.mouflet.skill.spoil.4": "§e%s §d>> §a不要打啦，给你摸摸好不好？",
-  "boss.toneko.mouflet.skill.spoil.5": "§e%s §d>> §a等等！让人家喘口气嘛~",
-  "boss.toneko.mouflet.skill.spoil.6": "§e%s §d>> §a人家知道错啦，轻点打嘛~",
-  "boss.toneko.mouflet.skill.spoil.7": "§e%s §d>> §a再打人家，人家就要生气啦！",
-  "boss.toneko.mouflet.skill.spoil.8": "§e%s §d>> §a呜呜，好痛，要亲亲才能起来！",
-  "boss.toneko.mouflet.skill.spoil.9": "§e%s §d>> §a不打了不打了，人家认输还不行嘛~",
-  "boss.toneko.mouflet.skill.charm.0": "§e%s §d>> §d嘘...现在开始是秘密时间哦~",
-  "boss.toneko.mouflet.skill.charm.1": "§e%s §d>> §d来陪人家玩玩嘛~",
-  "boss.toneko.mouflet.skill.charm.2": "§e%s §d>> §d别那么凶嘛，人家可是很温柔的哦~",
-  "boss.toneko.mouflet.skill.charm.3": "§e%s §d>> §d难道你忍心伤害这么可爱的我吗？",
-  "boss.toneko.mouflet.skill.charm.4": "§e%s §d>> §d看这里看这里，人家在这里呢~",
-  "boss.toneko.mouflet.skill.charm.5": "§e%s §d>> §d你的攻击对人家无效哦，不如放下武器吧~",
-  "boss.toneko.mouflet.skill.charm.6": "§e%s §d>> §d你确定还要继续吗？人家可是会心疼的哦~",
-  "boss.toneko.mouflet.skill.charm.7": "§e%s §d>> §d喵~战斗什么的太粗鲁了，来陪人家玩嘛~ ♡",
-  "boss.toneko.mouflet.skill.charm.8": "§e%s §d>> §d你的攻击都打偏啦，是不是被人家迷住了呀？",
-  "boss.toneko.mouflet.skill.charm.9": "§e%s §d>> §d别打啦，人家投降还不行吗？",
-  "boss.toneko.mouflet.skill.grabfly.0": "§e%s §d>> §b嘿嘿，带你去天上兜风！",
-  "boss.toneko.mouflet.skill.grabfly.1": "§e%s §d>> §b飞得高看得远，好好欣赏风景吧！",
-  "boss.toneko.mouflet.skill.grabfly.2": "§e%s §d>> §b别乱动哦，掉下去人家可不管~",
-  "boss.toneko.mouflet.skill.grabfly.3": "§e%s §d>> §b起飞啦！",
-  "boss.toneko.mouflet.skill.grabfly.4": "§e%s §d>> §b让你也体验一下当鸟的感觉！",
-  "boss.toneko.mouflet.skill.grabfly.5": "§e%s §d>> §b现在可是在我的掌控之中哦~(得意)",
-  "boss.toneko.mouflet.skill.grabfly.6": "§e%s §d>> §b抓紧啦，要加速咯！",
-  "boss.toneko.mouflet.skill.grabfly.7": "§e%s §d>> §b让你打人家，现在知道厉害了吧？",
-  "boss.toneko.mouflet.skill.grabfly.8": "§e%s §d>> §b上面的空气真新鲜呢~",
-  "boss.toneko.mouflet.skill.grabfly.9": "§e%s §d>> §b飞呀飞呀飞高高！",
-  "boss.toneko.mouflet.skill.despair.0": "§4%s §c>> §4啊啊啊！！！你们都要给我陪葬！！！",
-  "boss.toneko.mouflet.skill.despair.1": "§4%s §c>> §4既然这样...那就一起毁灭吧！！！",
-  "boss.toneko.mouflet.skill.despair.2": "§4%s §c>> §4喵哈哈...已经...什么都不在乎了...",
-  "boss.toneko.mouflet.skill.despair.3": "§4%s §c>> §4为什么...为什么要逼我走到这一步！！",
-  "boss.toneko.mouflet.skill.despair.4": "§4%s §c>> §4感受我的痛苦吧！！！",
-  "boss.toneko.mouflet.skill.despair.5": "§4%s §c>> §4永别了...这个世界...",
-  "boss.toneko.mouflet.skill.despair.6": "§4%s §c>> §4喵呜...这是你们自找的！！！",
-  "boss.toneko.mouflet.skill.despair.7": "§4%s §c>> §4核心过载启动...倒计时20秒...",
-  "boss.toneko.mouflet.skill.despair.8": "§4%s §c>> §4喵...已经...到极限了...",
-  "boss.toneko.mouflet.skill.despair.9": "§4%s §c>> §4警告！自毁程序已激活！",
-  "boss.toneko.mouflet.hurt.0": "§e%s §d>> §a呜喵！好痛！",
-  "boss.toneko.mouflet.hurt.1": "§e%s §d>> §a呀！不许打人家！",
-  "boss.toneko.mouflet.hurt.2": "§e%s §d>> §a疼疼疼！坏蛋！",
-  "boss.toneko.mouflet.hurt.3": "§e%s §d>> §a喵呜...轻点嘛...",
-  "boss.toneko.mouflet.hurt.4": "§e%s §d>> §a再打人家就咬你哦！",
-  "boss.toneko.mouflet.hurt.5": "§e%s §d>> §a呜...好过分...",
-  "boss.toneko.mouflet.hurt.6": "§e%s §d>> §a人家要生气了！",
-  "boss.toneko.mouflet.hurt.7": "§e%s §d>> §a喵！不许碰那里！",
-  "boss.toneko.mouflet.hurt.8": "§e%s §d>> §a呜...打不过就欺负人家...",
-  "boss.toneko.mouflet.hurt.9": "§e%s §d>> §a痛痛飞走~痛痛飞走~",
-  "boss.toneko.mouflet.tamed.0": "§e%s §d>> §a从今以后你就是人家的主人啦~",
-  "boss.toneko.mouflet.tamed.1": "§e%s §d>> §a呜...要好好对人家哦...",
-  "boss.toneko.mouflet.tamed.2": "§e%s §d>> §a喵~主人最好了！",
-  "boss.toneko.mouflet.tamed.3": "§e%s §d>> §a人家会乖乖听话的...大概？",
-  "boss.toneko.mouflet.tamed.4": "§e%s §d>> §a以后请多指教啦，主人~",
-  "boss.toneko.mouflet.tamed.5": "§e%s §d>> §a不许反悔哦，契约成立！",
-  "boss.toneko.mouflet.tamed.6": "§e%s §d>> §a喵呜...居然被收服了...",
-  "boss.toneko.mouflet.tamed.7": "§e%s §d>> §a主人要负责养人家一辈子哦~",
-  "boss.toneko.mouflet.tamed.8": "§e%s §d>> §a人家才不是因为喜欢你才同意的呢！",
-  "boss.toneko.mouflet.tamed.9": "§e%s §d>> §a喵~主人的味道真好闻~",
-  "boss.toneko.mouflet.gift.0": "§e%s §d>> §a喵！是给人家礼物吗？好开心！",
-  "boss.toneko.mouflet.gift.1": "§e%s §d>> §a呜哇~最喜欢主人了！",
-  "boss.toneko.mouflet.gift.2": "§e%s §d>> §a人家会好好珍惜的~",
-  "boss.toneko.mouflet.gift.3": "§e%s §d>> §a这是专门给人家准备的吗？好感动...",
-  "boss.toneko.mouflet.gift.4": "§e%s §d>> §a喵呜~主人最懂人家了！",
-  "boss.toneko.mouflet.gift.5": "§e%s §d>> §a人家可以现在就用掉吗？",
-  "boss.toneko.mouflet.gift.6": "§e%s §d>> §a这是...给人家的小惊喜吗？",
-  "boss.toneko.mouflet.gift.7": "§e%s §d>> §a呜...人家好开心...",
-  "boss.toneko.mouflet.gift.8": "§e%s §d>> §a主人对人家真好~",
-  "boss.toneko.mouflet.gift.9": "§e%s §d>> §a喵~这是人家收到过最好的礼物！",
+  "item.toneko.explosive_bomb": "爆炸弹",
+  "item.toneko.fighting_neko_spawn_egg": "武备猫娘生成",
+  "item.toneko.furry_bohe": "兽薄荷",
+  "item.toneko.furry_bohe.info": "§aAlso try Furry Bohe",
+  "item.toneko.ghost_neko_spawn_egg": "幽灵猫娘生成",
+  "item.toneko.lightning_bomb": "闪电弹",
+  "item.toneko.music_disc_kawaii": "音乐唱片",
+  "item.toneko.music_disc_never_gonna_give_you_up": "音乐唱片",
+  "item.toneko.neko_aggregator": "猫猫聚合台",
+  "item.toneko.neko_collector": "喵喵吸收器",
+  "item.toneko.neko_collector.info": "已经吸收 %d / %d 猫猫能量啦",
+  "item.toneko.neko_ears": "猫耳朵",
+  "item.toneko.neko_ingot": "猫猫锭",
+  "item.toneko.neko_potion.effect.empty": "猫娘药水",
+  "item.toneko.neko_tail": "猫尾巴",
   "itemGroup.toneko": "猫猫",
   "key.toneko.get_down": "趴下",
   "key.toneko.jump": "获取跳跃提升",
