--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -144,6 +144,7 @@
   "entity.toneko.ghost_neko": "Ghost neko",
   "entity.toneko.ghost_neko.des": "A neko in ghost form, ignoring gravity, can pass through walls and fly, but can interact with creatures",
   "entity.toneko.mouflet_neko_boss": "Honeyed Calamity・Mouflet",
+  "entity.toneko.ravenn": "Ravenn591",
   "gui.back.des": "I guess you know the meaning",
   "gui.toneko.roulette.option.close": "Close",
   "gui.toneko.roulette.option.get_down": "Lie down",
@@ -336,6 +337,16 @@
   "message.toneko.neko.on_hurt.yandere.2": "§e%s §d>> §dYou hurt me, and I'll make sure you pay for it no matter what!",
   "message.toneko.neko.on_hurt.yandere.3": "§e%s §d>> §dIf this makes you notice me, I'll endure anything.",
   "message.toneko.neko.on_hurt.yandere.4": "§e%s §d>> §dAre you trying to make me completely fall apart?",
+  "message.toneko.neko.on_hurt.ravenn.0": "§e%s §d>> §fAre you sick?",
+  "message.toneko.neko.on_hurt.ravenn.1": "§e%s §d>> §fGet lost!",
+  "message.toneko.neko.on_hurt.ravenn.2": "§e%s §d>> §fPsychopath!",
+  "message.toneko.neko.on_hurt.ravenn.3": "§e%s §d>> §fI'm going to kill you!",
+  "message.toneko.neko.on_hurt.ravenn.4": "§e%s §d>> §fFuck you!",
+  "message.toneko.neko.idle.ravenn.0": "§e%s §d>> §fThis panty is making me uncomfortable. I want to go neutral!",
+  "message.toneko.neko.idle.ravenn.1": "§e%s §d>> §fI almost suffocated while writing today because my pen consumes too much oxygen.",
+  "message.toneko.neko.idle.ravenn.2": "§e%s §d>> §fYou're so miserable in my head. I'm going to fantasize about you.",
+  "message.toneko.neko.idle.ravenn.3": "§e%s §d>> §fI have a weird feeling. Something's coming out.",
+  "message.toneko.neko.idle.ravenn.4": "§e%s §d>> §fWhy am I so feverish?",
   "messages.toneko.ai.not_enabled": "§cThe server not enabled AI",
   "messages.toneko.block.add": "§aAdd the blocked word succeed",
   "messages.toneko.block.remove": "§aRemove the blocked word succeed!",
@@ -631,6 +642,8 @@
   "screen.toneko.links.button.github.des": "See the source code? Give me a star is ok~",
   "screen.toneko.links.button.modrinth": "modrinth",
   "screen.toneko.links.button.modrinth.des": "There is download address of the Mod",
+  "screen.toneko.links.button.ravenn_bilibili": "Bilibili",
+  "screen.toneko.links.button.ravenn_bilibili.des": "This is Yaya's Bilibili account.",
   "screen.toneko.mate": "Select mate target",
   "screen.toneko.neko_entity_interactive.button.action": "Action",
   "screen.toneko.neko_entity_interactive.button.action.des": "Let the neko do something",
