--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -144,6 +144,7 @@
   "entity.toneko.ghost_neko": "幽灵猫娘",
   "entity.toneko.ghost_neko.des": "幽灵形态的猫娘，无视重力，可以穿墙与飞行，但可以与生物交互",
   "entity.toneko.mouflet_neko_boss": "蜜糖灾星・喵芙蕾",
+  "entity.toneko.ravenn": "Ravenn591",
   "gui.back.des": "不用解释你也知道是什么意思叭",
   "gui.toneko.roulette.option.close": "关闭",
   "gui.toneko.roulette.option.get_down": "趴下",
@@ -336,6 +337,16 @@
   "message.toneko.neko.on_hurt.yandere.2": "§e%s §d>> §d你敢伤害我，不管怎样我都会找回去的！",
   "message.toneko.neko.on_hurt.yandere.3": "§e%s §d>> §d如果这能让你注意我，我愿意承受一切。",
   "message.toneko.neko.on_hurt.yandere.4": "§e%s §d>> §d你是不是想让我彻底崩溃？",
+  "message.toneko.neko.on_hurt.ravenn.0": "§e%s §d>> §f你有病吧",
+  "message.toneko.neko.on_hurt.ravenn.1": "§e%s §d>> §f滚",
+  "message.toneko.neko.on_hurt.ravenn.2": "§e%s §d>> §f神经病",
+  "message.toneko.neko.on_hurt.ravenn.3": "§e%s §d>> §f我要杀了你",
+  "message.toneko.neko.on_hurt.ravenn.4": "§e%s §d>> §f打nm",
+  "message.toneko.neko.idle.ravenn.0": "§e%s §d>> §f这胖次嘞得我难受，想挂空档",
+  "message.toneko.neko.idle.ravenn.1": "§e%s §d>> §f今天写字差点憋死了，因为我笔耗氧",
+  "message.toneko.neko.idle.ravenn.2": "§e%s §d>> §f你在我脑子里可惨了，我要对你yy",
+  "message.toneko.neko.idle.ravenn.3": "§e%s §d>> §f有种很奇怪的感觉，能出东西了",
+  "message.toneko.neko.idle.ravenn.4": "§e%s §d>> §f我怎么这么烧",
   "messages.toneko.ai.not_enabled": "§c服务器没有开启AI哦",
   "messages.toneko.block.add": "§a成功添加屏蔽词了喵",
   "messages.toneko.block.remove": "§a成功删除了这个屏蔽词喵",
@@ -631,6 +642,8 @@
   "screen.toneko.links.button.github.des": "来看看源代码喵？点个star也行哦",
   "screen.toneko.links.button.modrinth": "modrinth",
   "screen.toneko.links.button.modrinth.des": "这是模组的下载地址喵",
+  "screen.toneko.links.button.ravenn_bilibili": "B站",
+  "screen.toneko.links.button.ravenn_bilibili.des": "这事鸦鸦的B站账号哦",
   "screen.toneko.mate": "选择交配对象",
   "screen.toneko.neko_entity_interactive.button.action": "行为",
   "screen.toneko.neko_entity_interactive.button.action.des": "让猫猫做出一些动作",
