--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -14,6 +14,9 @@
   "attribute.name.neko.degree": "猫猫等级",
   "attribute.name.neko.max_energy": "最大猫猫能量",
   "block.toneko.aggregator_block": "猫猫聚合台",
+  "block.toneko.neko_aggregator": "猫猫聚合台",
+  "block.toneko.neko_block": "猫猫块",
+  "block.toneko.neko_diamond_block": "猫猫钻石块",
   "block.toneko.catnip": "猫薄荷",
   "boss.toneko.mouflet.gift.0": "§e%s §d>> §a喵！是给人家礼物吗？好开心！",
   "boss.toneko.mouflet.gift.1": "§e%s §d>> §a呜哇~最喜欢主人了！",
@@ -121,18 +124,13 @@
   "command.tonekoadmin.config.not_found": "§c找不到这个配置哦：%s",
   "command.tonekoadmin.config.set": "§a成功将配置项%s§a的值设置为了：%s",
   "command.tonekoadmin.config.type_error": "§c类型错误喵",
-  "command.tonekoadmin.data.all_count": "§a一共的猫娘数据量：%s",
-  "command.tonekoadmin.data.delete_rubbish": "§a成功删除了%s个垃圾数据了喵，消耗了%s秒~",
-  "command.tonekoadmin.data.loaded_count": "§a当前已经加载的猫娘数据量：%s",
-  "command.tonekoadmin.help": "§b/tonekoadmin 帮助:\n§a/tonekoadmin help §b获取帮助\n§a/tonekoadmin set <玩家名称> §b将玩家设置为猫娘或取消设置\n§a/tonekoadmin reload §b重新加载配置文件和语言文件\n§a/tonekoadmin data §b数据相关\n§a/tonekoadmin config §b配置相关",
+  "command.tonekoadmin.set_level": "§a成功设置%s§a的猫猫等级为%d§a了喵",
+  "command.tonekoadmin.help": "§b/tonekoadmin 帮助:\n§a/tonekoadmin help §b获取帮助\n§a/tonekoadmin set <玩家名称> §b将玩家设置为猫娘或取消设置\n§a/tonekoadmin setLevel <玩家名称> <等级> §b设置玩家的猫猫等级\n§a/tonekoadmin reload §b重新加载配置文件和语言文件\n§a/tonekoadmin config §b配置相关",
   "command.tonekoadmin.reload": "§a成功重载了配置文件和语言文件了喵",
-  "command.tonekoadmin.reload.data": "§a成功重载了猫猫数据文件了喵，消耗了%s秒~",
   "command.tonekoadmin.set.false": "§a成功将 %s 取消设置为猫娘了喵",
   "command.tonekoadmin.set.true": "§a成功将 %s 设置为猫娘了喵",
-  "command.tonekoadmin.skin.add": "§a成功添加了 %s §a的皮肤了喵",
-  "command.tonekoadmin.skin.list": "§b所有的猫猫皮肤在这里啦:\n %s",
-  "command.tonekoadmin.skin.remove": "§a成功删除了 %s §a的皮肤了喵",
   "effect.toneko.exciting": "兴奋",
+  "emi.category.toneko.neko_aggregator": "猫猫聚合",
   "enchantment.toneko.enforcement": "强制",
   "enchantment.toneko.reversion": "反转",
   "entity.toneko.adventurer_neko": "冒险家猫娘",
@@ -199,6 +197,19 @@
   "item.toneko.neko_collector.info": "已经吸收 %d / %d 猫猫能量啦",
   "item.toneko.neko_ears": "猫耳朵",
   "item.toneko.neko_ingot": "猫猫锭",
+  "item.toneko.neko_block": "猫猫块",
+  "item.toneko.neko_diamond": "猫猫钻石",
+  "item.toneko.neko_diamond_block": "猫猫钻石块",
+  "item.toneko.neko_crystal": "猫猫水晶",
+  "item.toneko.neko_energy_storage.tip.uncharged": "§a可以在猫猫聚合台里充能喵",
+  "item.toneko.neko_energy_storage.tip.charged": "§b可以用它在猫猫聚合台里为自己补充能量喵",
+  "item.toneko.neko_energy_storage.tip.energy_count": "§d可存储的猫猫能量: %d ",
+  "item.toneko.neko_energy_storage_small": "小型猫猫注能石",
+  "item.toneko.neko_energy_storage_small_charged": "小型充能猫猫注能石",
+  "item.toneko.neko_energy_storage_medium": "中型猫猫注能石",
+  "item.toneko.neko_energy_storage_medium_charged": "中型充能猫猫注能石",
+  "item.toneko.neko_energy_storage_large": "大型猫猫注能石",
+  "item.toneko.neko_energy_storage_large_charged": "大型充能猫猫注能石",
   "item.toneko.neko_potion.effect.empty": "猫娘药水",
   "item.toneko.neko_tail": "猫尾巴",
   "itemGroup.toneko": "猫猫",
