--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -129,6 +129,10 @@
   "command.tonekoadmin.reload": "§a成功重载了配置文件和语言文件了喵",
   "command.tonekoadmin.set.false": "§a成功将 %s 取消设置为猫娘了喵",
   "command.tonekoadmin.set.true": "§a成功将 %s 设置为猫娘了喵",
+  "death.attack.bazooka": "%1$s被火箭筒干掉了喵",
+  "death.attack.bazooka.player": "%1$s被%2$s用火箭筒干掉了喵",
+  "death.attack.neko": "%1$s受到了猫猫的制裁喵",
+  "death.attack.neko.player": "%1$s被%2$s用猫猫的力量干掉了喵",
   "effect.toneko.exciting": "兴奋",
   "emi.category.toneko.neko_aggregator": "猫猫聚合",
   "enchantment.toneko.enforcement": "强制",
@@ -164,6 +168,8 @@
   "item.toneko.bazooka.tip.no_ammo": "无弹药",
   "item.toneko.bazooka.tip.reload": "§b按下Shift+右键自动填装",
   "item.toneko.catnip": "猫薄荷",
+  "item.toneko.infinite_catnip": "无限猫薄荷",
+  "item.toneko.infinite_catnip.tip": "§7食之不尽喵，用之不竭喵",
   "item.toneko.catnip_sandwich": "猫薄荷三明治",
   "item.toneko.catnip_seed": "猫薄荷种子",
   "item.toneko.contract": "契约",
@@ -185,6 +191,7 @@
   "item.toneko.contract.success": "§a成功与 %s §a签订契约了喵~",
   "item.toneko.contract.tame_fail": "§c失败了哦~",
   "item.toneko.explosive_bomb": "爆炸弹",
+  "item.toneko.energy_bomb": "能量弹",
   "item.toneko.fighting_neko_spawn_egg": "武备猫娘生成",
   "item.toneko.furry_bohe": "兽薄荷",
   "item.toneko.furry_bohe.info": "§aAlso try Furry Bohe",
@@ -212,6 +219,13 @@
   "item.toneko.neko_energy_storage_large_charged": "大型充能猫猫注能石",
   "item.toneko.neko_potion.effect.empty": "猫娘药水",
   "item.toneko.neko_tail": "猫尾巴",
+  "item.toneko.neko_energy_burst": "猫能爆哈器",
+  "item.toneko.neko_energy_burst.not_neko": "§c你还不是猫娘，不能用这个哦",
+  "item.toneko.neko_energy_burst.not_enough_energy": "§c能量不够啦喵",
+  "item.toneko.neko_energy_burst.tip": "§c哈！",
+  "item.toneko.neko_energy_burst.tip.damage": "§a基础伤害: %d",
+  "item.toneko.neko_energy_burst.tip.radius": "§b基础范围: %d",
+  "item.toneko.neko_energy_burst.tip.energy_cost": "§d能量消耗: %d",
   "itemGroup.toneko": "猫猫",
   "key.toneko.get_down": "趴下",
   "key.toneko.jump": "获取跳跃提升",
