也是到1.8.0了喵

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -15,6 +15,9 @@
   "attribute.name.neko.max_energy": "Max Neko Energy",
   "block.toneko.aggregator_block": "Neko Aggregator",
   "block.toneko.catnip": "Catnip",
+  "block.toneko.neko_aggregator": "Neko Aggregator",
+  "block.toneko.neko_block": "Neko Block",
+  "block.toneko.neko_diamond_block": "Neko Diamond Block",
   "command.neko.effect.not_enough_energy": "§cYour Neko Energy is not enough",
   "boss.toneko.mouflet.gift.0": "§e%s §d>> §aMeow! Is this a gift for me? So happy!",
   "boss.toneko.mouflet.gift.1": "§e%s §d>> §aWow~ I love you the most, Master!",
@@ -121,11 +124,17 @@
   "command.tonekoadmin.config.not_found": "§cCannot find this configuration: %s",
   "command.tonekoadmin.config.set": "§aSuccessfully set the value of configuration item %s§a to: %s",
   "command.tonekoadmin.config.type_error": "§cType error",
+  "command.tonekoadmin.set_level": "§aSet neko level of %s §ato %d§a successfully!",
   "command.tonekoadmin.data.all_count": "§aThe total amount of neko data: %s",
   "command.tonekoadmin.data.delete_rubbish": "§aSuccessfully deleted %s pieces of rubbish data, took %s seconds~",
   "command.tonekoadmin.data.loaded_count": "§aThe amount of neko data currently loaded: %s",
   "command.tonekoadmin.help": "§b/tonekoadmin help:\n§a/tonekoadmin help §bget help\n§a/tonekoadmin set <player> §bSet player to neko or unset\n§a/tonekoadmin reload §bReload the config and language\n§a/tonekoadmin data §bAbout data\n§a/tonekoadmin config §bConfig",
   "command.tonekoadmin.reload": "§aReload the config and language succeed!",
+  "death.attack.bazooka": "%1$s was killed by bazooka",
+  "death.attack.bazooka.player": "%1$s was killed by %2$s with bazooka",
+  "death.attack.neko": "%1$s was killed by the power of neko",
+  "death.attack.neko.player": "%1$s was killed by %2$s with the power of neko",
+  "emi.category.toneko.neko_aggregator": "Neko Aggregating",
   "command.tonekoadmin.reload.data": "§aSuccessfully reloaded neko data file meow,spent %s seconds",
   "command.tonekoadmin.set.false": "§aSet %s to neko succeed!",
   "command.tonekoadmin.set.true": "§aUnset %s to neko succeed!",
@@ -159,6 +168,8 @@
   "item.toneko.adventurer_neko_spawn_egg": "Adventurer Neko Spawn",
   "item.toneko.ammo.use_with_bazooka": "§aUse with Bazooka",
   "item.toneko.bazooka": "Bazooka",
+  "item.toneko.infinite_catnip": "Infinite Catnip",
+  "item.toneko.infinite_catnip.tip": "§7How many you eat,how many it has",
   "item.toneko.bazooka.no_ammo_selected": "§cNo ammunition selected",
   "item.toneko.bazooka.out_of_ammo": "§cOut of ammunition",
   "item.toneko.bazooka.reloaded": "§aAmmunition reloaded!",
@@ -180,6 +191,7 @@
   "item.toneko.contract.mesugaki.6": "§e%s §d>> §cBoring, I'd never accept you~",
   "item.toneko.contract.mesugaki.7": "§e%s §d>> §cWhat's this? Lame, I'd never contract with you~",
   "item.toneko.contract.mesugaki.8": "§e%s §d>> §cWanting me to join? What a zako you are♡",
+  "item.toneko.energy_bomb": "Energy Bomb",
   "item.toneko.contract.mesugaki.9": "§e%s §d>> §cYou're not worthy to contract me~ zako♡",
   "item.toneko.contract.mesugaki.10": "§e%s §d>> §cNo way♡ You stupid zako!",
   "item.toneko.contract.not_a_neko": "§cShe's not a neko girl",
@@ -192,8 +204,28 @@
   "item.toneko.furry_bohe.info": "Also try Furry Bohe",
   "item.toneko.ghost_neko_spawn_egg": "Ghost Neko Spawn",
   "item.toneko.lightning_bomb": "Lightning Bomb",
+  "item.toneko.neko_block": "Neko Block",
+  "item.toneko.neko_diamond": "Neko Diamond",
+  "item.toneko.neko_diamond_block": "Neko Diamond Block",
+  "item.toneko.neko_crystal": "Neko Crystal",
+  "item.toneko.neko_energy_storage.tip.uncharged": "§aYou can charge it in Neko Aggregator",
+  "item.toneko.neko_energy_storage.tip.charged": "§bYou can use it to give energy to you in Neko Aggregator",
+  "item.toneko.neko_energy_storage.tip.energy_count": "§dNeko Energy Amount: %d ",
+  "item.toneko.neko_energy_storage_small": "Small Neko Energy Storage",
+  "item.toneko.neko_energy_storage_small_charged": "Charged Small Neko Energy Storage",
+  "item.toneko.neko_energy_storage_medium": "Medium Neko Energy Storage",
+  "item.toneko.neko_energy_storage_medium_charged": "Charged Medium Neko Energy Storage",
+  "item.toneko.neko_energy_storage_large": "Large Neko Energy Storage",
+  "item.toneko.neko_energy_storage_large_charged": "Charged Large Neko Energy Storage",
   "item.toneko.music_disc_kawaii": "Music Disc",
   "item.toneko.neko_aggregator": "Neko Aggregator",
+  "item.toneko.neko_energy_burst": "Neko Energy Burst",
+  "item.toneko.neko_energy_burst.not_neko": "§cYou are not a neko,so you can't use this item",
+  "item.toneko.neko_energy_burst.not_enough_energy": "§cYour energy is not enough",
+  "item.toneko.neko_energy_burst.tip": "§cHa！",
+  "item.toneko.neko_energy_burst.tip.damage": "§aBasic Damage: %d",
+  "item.toneko.neko_energy_burst.tip.radius": "§bBasic Radius: %d",
+  "item.toneko.neko_energy_burst.tip.energy_cost": "§dEnergy Cost: %d",
   "item.toneko.music_disc_never_gonna_give_you_up": "Music Disc",
   "item.toneko.neko_collector": "Neko collector",
   "item.toneko.neko_collector.info": "%d / %d Neko Energy already",
